# simple_socket

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
include/simple_socket/: simple_socket.hpp  simple_socket_exception.hpp
src/: CMakeLists.txt  Config.cmake.in  simple_socket.cpp
